--- a/app/views/home/labreview_write.html.erb
+++ b/app/views/home/labreview_write.html.erb
@@ -77,21 +77,21 @@
       <br><br>
       <p style="display:table;"><span style="display:table-cell;vertical-align:middle;font-size:20px;">시설</span>&nbsp;&nbsp;
         <span class="star-rating small" style="float:right">
-        <input type="radio" name="facility_rating" value="1"><i></i>
-        <input type="radio" name="facility_rating" value="2"><i></i>
-        <input type="radio" name="facility_rating" value="3"><i></i>
-        <input type="radio" name="facility_rating" value="4"><i></i>
-        <input type="radio" name="facility_rating" value="5"><i></i>
+        <input class="facility_selected" type="radio" name="facility_rating" value="1"><i></i>
+        <input class="facility_selected" type="radio" name="facility_rating" value="2"><i></i>
+        <input class="facility_selected" type="radio" name="facility_rating" value="3"><i></i>
+        <input class="facility_selected" type="radio" name="facility_rating" value="4"><i></i>
+        <input class="facility_selected" type="radio" name="facility_rating" value="5"><i></i>
       </span></p>
       <textarea class="form-control" name="facility_content" placeholder="시설에 대한 평가" rows="3" required></textarea>
       <br><br>
       <p style="display:table;"><span style="display:table-cell;vertical-align:middle;font-size:20px;">컴퓨터</span>&nbsp;&nbsp;
         <span class="star-rating small" style="float:right">
-          <input type="radio" name="computer_rating" value="1"><i></i>
-          <input type="radio" name="computer_rating" value="2"><i></i>
-          <input type="radio" name="computer_rating" value="3"><i></i>
-          <input type="radio" name="computer_rating" value="4"><i></i>
-          <input type="radio" name="computer_rating" value="5"><i></i>
+          <input class="computer_selected" type="radio" name="computer_rating" value="1"><i></i>
+          <input class="computer_selected" type="radio" name="computer_rating" value="2"><i></i>
+          <input class="computer_selected" type="radio" name="computer_rating" value="3"><i></i>
+          <input class="computer_selected" type="radio" name="computer_rating" value="4"><i></i>
+          <input class="computer_selected" type="radio" name="computer_rating" value="5"><i></i>
         </span></p>
       <textarea class="form-control" name="computer_content" placeholder="컴퓨터에 대한 평가"  rows="3" required></textarea>
       <br><br>
@@ -115,7 +115,18 @@
 
 <script>
   $(function() {
-    while()
+    var location_value = $(".location_selected").val();
+    var facility_value = $(".facility_selected").val();
+    var computer_value = $(".computer_selected").val();
+    
+    if (location_value == 1 && facility_value == 1 && computer_value == 1){
+      alert("별점 선택좀");
+    }
+    else{
+      
+      alert("선택하셨군요!!");
+    }
+    
     $("#select_region").change(function() {
         var code = $(this).val();
         if(code=="01"){
@@ -145,9 +156,9 @@
     });
     
     
-  $(".location_selected").change(function() {
-        alert("1입니다");  
-    });
+  // $(".location_selected").change(function() {
+  //       alert("1입니다");  
+  //   });
     
   });
   
