modi_default_star

--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -114,10 +114,18 @@ $('[data-toggle=collapse]').click(function(){
         <%@rank+=1%>
         <%end%>
       </div><br><br>
-      
+      <div style="border-top: >  
+        <footer>
+          <p>Posted by: Hege Refsnes</p>
+          <p>Contact information: <a href="mailto:someone@example.com">
+          someone@example.com</a>.</p>
+        </footer>  
+      </div>
     </div>
+  
     
   </div>
+  
   
 <script>
   $(function() {
@@ -129,6 +137,7 @@ $('[data-toggle=collapse]').click(function(){
     });
   });
 </script>
+
   
 <!--각 학교별 페이지인경우-->
 <%else%>
