--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -49,7 +49,7 @@ $('[data-toggle=collapse]').click(function(){
         <%@rank=1%>
         <%@testcenter.sort_by{|x| x[:avg_point]}.reverse.take(8).each do |y|%>
         <div class="col-md-6">
-         <a href="/home/labreview/<%=y.id%>" style="color:black; text-decoration:none;">
+         <a href="/home/labreview/<%=y.id%>" style="color:black; text-decoration:none; z-index:100;">
           <div id="link" class="thumbnail" style="height:200px;">
             <div class="row">
               <div class="col-md-7">
@@ -58,11 +58,12 @@ $('[data-toggle=collapse]').click(function(){
                     <nobr><strong><%=@rank%>위  <%=y.name%></strong></nobr>
                   </div>
                   <!--<p><%=y.address%></p>-->
-                  <iframe width="98%" height="100%" frameborder="0" style="border:0"
+                  <a href="/home/labreview/<%=y.id%>" style="color:black; text-decoration:none;">
+                  <iframe width="98%" height="100%" frameborder="0" style="border:0; z-index:-10;"
                           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDxbMZWBxFjGnTiZOMAeSIm6TFR4BvhFUM&q=<%=y.position_lat%>,<%=y.position_lng%>"
                           >
                   </iframe>
-                  
+                  </a>
                 </div>
               </div>
               <div class="col-md-5" style="margin-left: -20px;">
@@ -105,7 +106,7 @@ $('[data-toggle=collapse]').click(function(){
                       <i></i>
                     <% end %>
                   <% end %>
-                </span><span>&nbsp;(<%=y.avg_point%>)</span>
+                </span><span>(<%=y.avg_point%>)</span>
               </div>
             </div>
           </div>
@@ -113,12 +114,11 @@ $('[data-toggle=collapse]').click(function(){
         </div>
         <%@rank+=1%>
         <%end%>
-      </div><br><br>
-      <div style="border-top: >  
-        <footer>
-          <p>Posted by: Hege Refsnes</p>
-          <p>Contact information: <a href="mailto:someone@example.com">
-          someone@example.com</a>.</p>
+      </div><br><br><br><br>
+      <div style="border-top: 1px solid #BDBDBD; text-align: right; padding-top: 10px;">  
+        <footer style="color:#A6A6A6;">
+          <p>Copyright(c)2015 <span style="color:red;">TO</span>map 강병욱 송영현 김새봄 All rights reserved</p>
+          <p>멋 쟁 이 사 자 처 럼 3 기 한 양 대</p>
         </footer>  
       </div>
     </div>
